unpackaged/main/default/objects/pse__Issue__c/pse__Issue__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__IssueHelp</customHelpPage>
    <description>Contains issues raised against projects.</description>
    <label>Issue</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>