unpackaged/main/default/objects/pse__Issue__c/fields/psa_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>psa_Deadline_Date__c</fullName>
    <label>Deadline Date</label>
    <type>Date</type>
</CustomField>