unpackaged/main/default/objects/pse__Issue__c/fields/psa_Exclude_from_Report__c.field-meta.xml
<CustomField>
    <fullName>psa_Exclude_from_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Report</label>
    <type>Checkbox</type>
</CustomField>