unpackaged/main/default/objects/pse__Issue__c/fields/psa_Owner_Client_or_IHS__c.field-meta.xml
<CustomField>
    <fullName>psa_Owner_Client_or_IHS__c</fullName>
    <label>Owner (Client or IHS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>IHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>