unpackaged/main/default/objects/pse__Issue__c/fields/pse__Closed__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed__c</fullName>
    <description>Determines when closed based on the issue's Status. Defaults to true when the Status is Completed or Closed - No action. Set to false for all other Status values.</description>
    <formula>if(OR(ISPICKVAL(pse__Status__c,'Closed - No action'),ISPICKVAL(pse__Status__c,'Completed')) ,true,false)</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>