unpackaged/main/default/objects/pse__Issue__c/fields/pse__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed_Date__c</fullName>
    <description>The date that the issue was closed.</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>