unpackaged/main/default/objects/pse__Issue__c/fields/pse__Impact__c.field-meta.xml
<CustomField>
    <fullName>pse__Impact__c</fullName>
    <description>The impact of the issue. Values are 1 to 5. 1 is the lowest impact and 5 is the highest.</description>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Negligible</label>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2 - Low</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Moderate</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - High</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Critical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>