unpackaged/main/default/objects/pse__Issue__c/fields/pse__Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>pse__Issue_Description__c</fullName>
    <description>A description of the issue.</description>
    <label>Issue Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>