unpackaged/main/default/objects/pse__Issue__c/fields/pse__Issue_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Issue_Name__c</fullName>
    <description>The name of the issue.</description>
    <label>Issue Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>