unpackaged/main/default/objects/pse__Issue__c/fields/pse__Issue_Owner__c.field-meta.xml
<CustomField>
    <fullName>pse__Issue_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The resource assigned as the issue owner.</description>
    <label>Issue Owner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.pse__Is_Resource__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.pse__Is_Resource_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>