unpackaged/main/default/objects/pse__Issue__c/fields/pse__Milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The milestone relating to the issue.</description>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.pse__Project__c</field>
            <operation>equals</operation>
            <valueField>pse__Milestone__c.pse__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>