unpackaged/main/default/objects/pse__Issue__c/fields/pse__Priority__c.field-meta.xml
<CustomField>
    <fullName>pse__Priority__c</fullName>
    <description>The priority of the issue. Values are 1 to 5. 1 is the lowest impact and 5 is the highest.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>