unpackaged/main/default/objects/pse__Issue__c/fields/pse__risk__c.field-meta.xml
<CustomField>
    <fullName>pse__risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The risk associated with the issue.</description>
    <inlineHelpText>The risk associated with the issue.</inlineHelpText>
    <label>Risk</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>$Source.pse__Project__c</field>
            <operation>equals</operation>
            <valueField>pse__Risk__c.pse__Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.pse__Opportunity__c</field>
            <operation>equals</operation>
            <valueField>pse__Risk__c.pse__Opportunity__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>pse__Risk__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>