unpackaged/main/default/objects/pse__Issue__c/fields/pse__Severity__c.field-meta.xml
<CustomField>
    <fullName>pse__Severity__c</fullName>
    <description>The severity of the issue. Calculated from multiplying the Impact and Priority value.</description>
    <formula>VALUE( TEXT(pse__Impact__c ) ) * VALUE( TEXT(pse__Priority__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The severity of the issue. Calculated from multiplying the Impact and Priority value.</inlineHelpText>
    <label>Severity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>