unpackaged/main/default/objects/pse__Issue__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <description>The status of the issue. Values are Not Yet Started, In Progress, Completed, On Hold, Closed - No action.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Started</fullName>
                <default>true</default>
                <label>Not Yet Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed - No action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>