unpackaged/main/default/objects/pse__Issue__c/validationRules/pse__Close_date_mandatory_if_status_is_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Close_date_mandatory_if_status_is_closed</fullName>
    <active>true</active>
    <description>The Closed Date cannot be blank if the status is set to Completed or Closed - No Action.</description>
    <errorConditionFormula>(AND(OR(ISPICKVAL(pse__Status__c,'Completed'), ISPICKVAL(pse__Status__c,'Closed - No action')), ISBLANK(pse__Closed_Date__c)))</errorConditionFormula>
    <errorMessage>The Closed Date cannot be blank if the status is set to Completed or Closed - No Action.</errorMessage>
</ValidationRule>