unpackaged/main/default/objects/pse__Issue__c/validationRules/pse__Closed_Date_Blank_If_Status_Not_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Closed_Date_Blank_If_Status_Not_Closed</fullName>
    <active>true</active>
    <description>The Closed date must be blank if the status is set to  Not Yet Started, In Progress or On Hold.</description>
    <errorConditionFormula>AND(OR( ISPICKVAL(pse__Status__c ,'Not Yet Started'),ISPICKVAL(pse__Status__c ,'In Progress'),ISPICKVAL(pse__Status__c ,'On Hold')), (!ISBLANK(pse__Closed_Date__c ))
)</errorConditionFormula>
    <errorMessage>The Closed date must be blank if the status is set to  Not Yet Started, In Progress or On Hold.</errorMessage>
</ValidationRule>