unpackaged/main/default/objects/pse__Issue__c/validationRules/pse__Closed_Date_Greater_Than_Date_Raised.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Closed_Date_Greater_Than_Date_Raised</fullName>
    <active>true</active>
    <description>The issue's closed date must be after it was raised.</description>
    <errorConditionFormula>pse__Closed_Date__c&lt; pse__Date_Raised__c</errorConditionFormula>
    <errorMessage>The issue's closed date must be after it was raised.</errorMessage>
</ValidationRule>